# OptimAIzer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: conversion_rate.csv  data.xlsx  inventory.csv  market_size.csv  solution.csv
optimaizer/: app.py  demo.py  main.py
optimaizer/llm/: agent.py  types.py
optimaizer/pricing_optimizer/: functions.py  optimizer.py  types.py
optimaizer/utils/: execute_code.py  logging_config.py
tests/pricing_optimizer/: functions_test.py
